feat: Add auth service, interceptor, and guard from peaked migration
Migrated auth system from peaked (Angular 18) to peaked2026 (Angular 20+):
- AuthService with signal-based isAuthenticated state
- authInterceptor functional interceptor adds Bearer token
- AuthGuard for protected routes
- Switched from zoneless to zone-based change detection
- Installed zone.js for test compatibility
- All 29 tests passing

--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,13 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "host": "0.0.0.0",
+            "port": 4200,
+            "ssl": true,
+            "sslCert": "D:/deployed_projects/localssl/main-certs.crt",
+            "sslKey": "D:/deployed_projects/localssl/main-certs.key"
+          },
           "configurations": {
             "production": {
               "buildTarget": "peaked2026:build:production"
@@ -72,6 +79,7 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
