--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@angular/cli": "^20.3.15",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.182.0",
     "@types/webxr": "^0.5.24",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
